--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -78,16 +78,20 @@
             </section>
             
             <!-- Camera -->
-             <section class="card device-card">
+            <section class="card device-card">
                 <header class="device-header">
                     <h2>Camera</h2>
                 </header>
-                <div class="button-group">
-                    <button id="camera-left-btn" class="btn btn-gold" type="button">Move Left</button>
-                    <button id="camera-right-btn" class="btn btn-navy" type="button">Move Right</button>
+
+                <div class="camera-grid">
+                    <button id="camera-up-btn" class="btn btn-gold">Up</button>
+                    <button id="camera-left-btn" class="btn btn-gold">Left</button>
+                    <button id="camera-right-btn" class="btn btn-navy">Right</button>
+                    <button id="camera-down-btn" class="btn btn-navy">Down</button>
                 </div>
-             </section>
-             
+            </section>
+
+
         </div>
     </main>
     <script type="module" src="./app.js"></script>
