Add camera stream iframes to dashboard

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -82,7 +82,12 @@
                 <header class="device-header">
                     <h2>Camera</h2>
                 </header>
-
+                <div class="camera-1-stream">
+                    <iframe src="http://mediamtx-10.136.27.139:8888/camHLS" scrolling="no"></iframe>
+                </div>
+                <div class="camera-2-stream">
+                    <iframe src="http://mediamtx-10.136.27.139:8888/cam2HLS" scrolling="no"></iframe>
+                </div>
                 <div class="camera-grid">
                     <button id="camera-up-btn" class="btn btn-gold">Up</button>
                     <button id="camera-left-btn" class="btn btn-gold">Left</button>
@@ -90,6 +95,7 @@
                     <button id="camera-down-btn" class="btn btn-navy">Down</button>
                 </div>
             </section>
+            
 
 
         </div>
